--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,17 @@ jobs:
     - name: Build with Maven
       run: mvn clean package
 
+    - name: Get JAR Location
+      run: |
+        jar_location=$(find target -name '*.jar' -exec readlink -f {} +)
+        echo "JAR Location: $jar_location"
+        echo "::set-output name=jar_location::$jar_location"
+      id: jar  
+
     - name: Jfrog push v2
       uses: jfrog/setup-jfrog-cli@v2
       env:
-        JF_URL: http://3.140.200.126:8081
+        JF_URL: http://13.201.130.85:8081
         JF_USER: admin
         JF_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
     - run: |
