--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,4 +62,4 @@ jobs:
          JF_USER: admin
          JF_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
       - run: |
-         jf rt u "target/*.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT/"
+         jf rt u "target/*.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT/webapp-{{github.run_number}}"
