--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,20 +4,20 @@ on:
   workflow_dispatch
 
 jobs:
-#   snyk:
-#     runs-on: ubuntu-latest
+  snyk:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@master
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@master
 
-#       - name: Run Snyk to check for vulnerabilities
-#         uses: snyk/actions/maven@master
-#         continue-on-error: true
-#         env:
-#           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-#         with:
-#           command: monitor
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/maven@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: monitor
 
   SonarQube:
     runs-on: ubuntu-latest
