--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,7 @@ jobs:
 
   JFrog:
     runs-on: ubuntu-latest
+    needs: Build
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
