--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,61 +4,61 @@ on:
   push
  
 jobs:
-#   Snyk:
-#     runs-on: ubuntu-latest
+  Snyk:
+    runs-on: ubuntu-latest
  
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@master
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@master
  
-#       - name: Run Snyk to check for vulnerabilities
-#         uses: snyk/actions/maven@master
-#         continue-on-error: true
-#         env:
-#           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-#         with:
-#           command: monitor
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/maven@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: monitor
  
-  # SonarQube:
-  #   runs-on: ubuntu-latest
-  #   needs: Snyk
-  #   outputs:
-  #     # Output artifact path to be used by the downstream jobs
-  #     id: build-output
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         fetch-depth: 0
+  SonarQube:
+    runs-on: ubuntu-latest
+    needs: ["Snyk"]
+    outputs:
+      # Output artifact path to be used by the downstream jobs
+      id: build-output
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
  
-  #     - name: Set up JDK 17
-  #       uses: actions/setup-java@v1
-  #       with:
-  #         java-version: 17
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
  
-  #     - name: Cache SonarQube packages
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: ~/.sonar/cache
-  #         key: ${{ runner.os }}-sonar
-  #         restore-keys: ${{ runner.os }}-sonar
+      - name: Cache SonarQube packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
  
-  #     - name: Cache Maven packages
-  #       uses: actions/cache@v1
-  #       with:
-  #         path: ~/.m2
-  #         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-  #         restore-keys: ${{ runner.os }}-m2
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
  
-  #     - name: Build and analyze
-  #       env:
-  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-  #         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-  #       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+      - name: Build and analyze
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
         
  
   Build:
     runs-on: ubuntu-latest
-    # needs: SonarQube
+    needs: ["SonarQube"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -76,7 +76,7 @@ jobs:
  
   JFrog:
     runs-on: ubuntu-latest
-    needs: Build
+    needs: ["Build"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
