--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,16 @@
 name: Power_Pipeline
- 
+
 on:
   push
- 
+
 jobs:
   Snyk:
     runs-on: ubuntu-latest
- 
+
     steps:
       - name: Checkout code
         uses: actions/checkout@master
- 
+
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/maven@master
         continue-on-error: true
@@ -18,82 +18,65 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: monitor
- 
+
   SonarQube:
     runs-on: ubuntu-latest
     needs: ["Snyk"]
-    outputs:
-      # Output artifact path to be used by the downstream jobs
-      id: build-output
+    
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0
- 
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
           java-version: 17
- 
+
       - name: Cache SonarQube packages
         uses: actions/cache@v1
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
- 
+
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
- 
+
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-        
- 
+
   Build:
     runs-on: ubuntu-latest
     needs: ["SonarQube"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
- 
+
       - name: Build with Maven
-        run: |
-          mvn clean package
-          cp target/*.jar >> $GITHUB_WORKSPACE/
-        
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v2
-        with:
-         name: build-artifact
-         path: target/*.jar
- 
+        run: mvn clean package
+
   JFrog:
     runs-on: ubuntu-latest
     needs: ["Build"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
- 
-      - name: Download build artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: build-artifact
-          path: target/
- 
+        
       - name: Jfrog push v2
         uses: jfrog/setup-jfrog-cli@v2
         env:
           JF_URL: ${{ secrets.JF_URL }}
           JF_USER: admin
           JF_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
- 
+
       - name: Jfrog Artifactory Upload
         run: |
-         jf rt u target/*.jar  "jfrog/onlinebookstore/0.0.1-SNAPSHOT/webapp-${{ github.run_number }}"
+         jf rt u "target/*.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT/webapp-${{ github.run_number }}"
