--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
-  Build:
+  Build_and_JFrog:
     runs-on: ubuntu-latest
     needs: ["SonarQube"]
     steps:
@@ -62,13 +62,6 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean package
-
-  JFrog:
-    runs-on: ubuntu-latest
-    needs: ["Build"]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
         
       - name: Jfrog push v2
         uses: jfrog/setup-jfrog-cli@v2
