--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,7 +1,7 @@
 name: sample_Power_Pipeline
 
 on:
-  push
+  workflow_dispatch:
 
 jobs:
   # Snyk:
@@ -63,7 +63,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build with Maven
-        run: mvn clean package
+        run: |
+          mvn clean package
+          pwd
+          ls
 
       - name: Archive artifact
         uses: actions/upload-artifact@v2
