--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -57,7 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     # needs: ["SonarQube"]
     outputs:
-      artifactPath: ${{ runner.workspace }}/target/*.jar
+      artifactPath: ${{ runner.workspace }}/Power_Pipeline/target/dependency/*.jar
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -72,7 +72,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: my-artifact
-          path: ${{ runner.workspace }}/Power_Pipeline/target/*.jar
+          path: ${{ runner.workspace }}/Power_Pipeline/target/dependency/*.jar
 
   # JFrog:
   #   runs-on: ubuntu-latest
