--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -74,20 +74,26 @@ jobs:
           name: my-artifact
           path: ${{ runner.workspace }}/Power_Pipeline/target/dependency/*.jar
 
-  # JFrog:
-  #   runs-on: ubuntu-latest
-  #   needs: ["Build"]
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
+  JFrog:
+    runs-on: ubuntu-latest
+    needs: ["Build"]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
         
-  #     - name: Jfrog push v2
-  #       uses: jfrog/setup-jfrog-cli@v2
-  #       env:
-  #         JF_URL: ${{ secrets.JF_URL }}
-  #         JF_USER: ${{ secrets.JFROG_USERNAME }}
-  #         JF_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
+      - name: Jfrog push v2
+        uses: jfrog/setup-jfrog-cli@v2
+        env:
+          JF_URL: ${{ secrets.JF_URL }}
+          JF_USER: ${{ secrets.JFROG_USERNAME }}
+          JF_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
+          
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: my-artifact
+          path: ${{ runner.workspace }}/downloaded-artifact
 
-  #     - name: Jfrog Artifactory Upload
-  #       run: |
-  #        jf rt u "target/*.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT/webapp-${{ github.run_number }}"
+      - name: Jfrog Artifactory Upload
+        run: |
+         jf rt u "${{ runner.workspace }}/downloaded-artifact/*.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT/webapp-${{ github.run_number }}"
