--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
-name: Power_Pipeline
+name: sample_Power_Pipeline
 
 on:
-  workflow_dispatch:
+  push:
 
 jobs:
   Snyk:
@@ -53,15 +53,33 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
 
-  Build_and_JFrog:
+  Build:
     runs-on: ubuntu-latest
-    needs: ["SonarQube"]
+    # needs: ["SonarQube"]
+    outputs:
+      artifactPath: ${{ runner.workspace }}/Power_Pipeline/target/dependency/*.jar
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Build with Maven
-        run: mvn clean package
+        run: |
+          mvn clean package
+          pwd
+          ls
+
+      - name: Archive artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: ${{ runner.workspace }}/Power_Pipeline/target/dependency/*.jar
+
+  JFrog:
+    runs-on: ubuntu-latest
+    needs: ["Build"]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
         
       - name: Jfrog push v2
         uses: jfrog/setup-jfrog-cli@v2
@@ -69,7 +87,13 @@ jobs:
           JF_URL: ${{ secrets.JF_URL }}
           JF_USER: ${{ secrets.JFROG_USERNAME }}
           JF_PASSWORD: ${{ secrets.JFROG_PASSWORD }}
+          
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: my-artifact
+          path: ${{ runner.workspace }}/downloaded-artifact
 
       - name: Jfrog Artifactory Upload
         run: |
-         jf rt u "target/*.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT/webapp-${{ github.run_number }}"
+         jf rt u "${{ runner.workspace }}/downloaded-artifact/*.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT/webapp-${{ github.run_number }}"
