--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ on:
 jobs:
   Snyk:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@master
@@ -22,7 +21,6 @@ jobs:
   SonarQube:
     runs-on: ubuntu-latest
     needs: ["Snyk"]
-    
     steps:
       - uses: actions/checkout@v2
         with:
@@ -55,7 +53,7 @@ jobs:
 
   Build:
     runs-on: ubuntu-latest
-    # needs: ["SonarQube"]
+    needs: ["SonarQube"]
     outputs:
       artifactPath: ${{ runner.workspace }}/Power_Pipeline/target/dependency/*.jar
     steps:
