--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
 
   JFrog:
     runs-on: ubuntu-latest
-    needs: ["Build"]
+    # needs: ["Build"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
