--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,3 +95,13 @@ jobs:
       - name: Jfrog Artifactory Upload
         run: |
          jf rt u "${{ runner.workspace }}/downloaded-artifact/*.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT/webapp-${{ github.run_number }}"
+
+       - name: Docker build and push
+         run: |
+          # Run commands to build and push Docker images
+          docker build -t tic-tac-toe .
+          docker tag tic-tac-toe yedudevops/tic-tac-toe:latest
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+          docker push yedudevops/tic-tac-toe:latest
+        env:
+          DOCKER_CLI_ACI: 1         
