--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,21 +106,19 @@ jobs:
 
           # Log into AWS Account using this commands.
 
-          aws ecr get-login-password --region ap-southeast-1 | docker login --username aws --password-stdin 609695/13455.dkr.ecr.ap-southeast-1.amazonaws.com
-
+          aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 637423247927.dkr.ecr.ap-south-1.amazonaws.com
           #  Build the image.
-
+          
           docker build -t powerpipeline .
-
+          
           # Tag the image name
-
-          docker tag powerpipeline:latest 609695713455.dkr.ecr.ap-southeast-1.amazonaws.com/powerpipeline:latest
-
+          
+          docker tag powerpipeline:latest 637423247927.dkr.ecr.ap-south-1.amazonaws.com/powerpipeline:latest
+          
           # push the image into aws ecr
 
-          docker push 609695713455.dkr.ecr.ap-southeast-1.amazonaws.com/powerpipeline:latest 
+          docker push 637423247927.dkr.ecr.ap-south-1.amazonaws.com/powerpipeline:latest
           
          env:
            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-           AWS_SESSION_TOKEN: ${{secrets.AWS_SESSION_TOKEN}}           
+           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}          
