--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
 
   Docker_Image:
     runs-on: ubuntu-latest
-    needs: ["JFrog"]
+    #needs: ["JFrog"]
     steps:    
        - name: Docker build and push
          run: |
