--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,10 +106,10 @@ jobs:
 
           # Log into AWS Account using this commands.
 
-          aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 637423247927.dkr.ecr.ap-south-1.amazonaws.com
+          # aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 637423247927.dkr.ecr.ap-south-1.amazonaws.com
           #  Build the image.
           
-          docker build -t powerpipeline /var/lib/docker/tmp/buildkit-mount3135126063/Dockerfile
+          docker build -t powerpipeline .
           
           # Tag the image name
           
