--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -104,6 +104,7 @@ jobs:
          run: |
              ls 
              pwd
+             ls | grep Dockerfile
           # Run commands to build and push Docker images
 
           # Log into AWS Account using this commands.
