--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,7 +127,7 @@ jobs:
          uses: docker/setup-buildx-action@v3
          
        - name: build the image 
-         run:  docker build -t powerpipeline .
+         run:  docker --version
       
       # - name: Login to Docker Hub
       #   uses: docker/login-action@v3
