--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,7 +127,11 @@ jobs:
          uses: docker/setup-buildx-action@v3
          
        - name: build the image 
-         run:  docker --version
+         run: |
+              docker --version
+              docker build -t powerpipeline /home/runner/work/Power_Pipeline/Power_Pipeline/Dockerfile
+              
+             
       
       # - name: Login to Docker Hub
       #   uses: docker/login-action@v3
