--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     #needs: ["JFrog"]
     steps:    
+        - name: Checkout code
+          uses: actions/checkout@master
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v3
         - name: Build and push
