--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: Power_Pipeline
+# name: Power_Pipeline
 
-on:
-  push:
+# on:
+#   push:
 
-jobs:
+# jobs:
   # Snyk:
   #   runs-on: ubuntu-latest
   #   steps:
@@ -96,12 +96,12 @@ jobs:
   #       run: |
   #        jf rt u "${{ runner.workspace }}/downloaded-artifact/*.jar" "jfrog/onlinebookstore/0.0.1-SNAPSHOT/webapp-${{ github.run_number }}"
 
-  Docker_Image:
-    runs-on: ubuntu-latest
-    #needs: ["JFrog"]
-    steps:    
-       - name: Docker build and push
-         run: |
+  # Docker_Image:
+  #   runs-on: ubuntu-latest
+  #   #needs: ["JFrog"]
+  #   steps:    
+  #      - name: Docker build and push
+  #        run: |
              # Run commands to build and push Docker images
 
              # Log into AWS Account using this commands.
@@ -120,18 +120,18 @@ jobs:
           # docker push 637423247927.dkr.ecr.ap-south-1.amazonaws.com/powerpipeline:latest
           #name: ci
 
-       - name: Set up QEMU
-         uses: docker/setup-qemu-action@v3
+       # - name: Set up QEMU
+       #   uses: docker/setup-qemu-action@v3
     
-       - name: Set up Docker Buildx
-         uses: docker/setup-buildx-action@v3
+       # - name: Set up Docker Buildx
+       #   uses: docker/setup-buildx-action@v3
          
-       - name: build the image 
-         run: |
-              docker --version
-              docker build -t powerpipeline .
-              ls
-              pwd
+       # - name: build the image 
+       #   run: |
+       #        docker --version
+       #        docker build -t powerpipeline .
+       #        ls
+       #        pwd
              
       
       # - name: Login to Docker Hub
@@ -146,6 +146,6 @@ jobs:
       #     push: true
       #     tags: user/app:latest
           
-         env:
-           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}          
+         # env:
+         #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}          
