--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -10,19 +10,21 @@ jobs:
     steps:    
         - name: Checkout code
           uses: actions/checkout@master
+
           
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
-        
         - name: check files
           run: |
                ls -l
                pwd
+          
+        # - name: Set up Docker Buildx
+        #   uses: docker/setup-buildx-action@v3
+        
                
           
-        - name: Build and push
-          uses: docker/build-push-action@v5
-          with:
-            context: "{{defaultContext}}:mysubdir"
-            push: true
-            tags: user/app:latest
+        # - name: Build and push
+        #   uses: docker/build-push-action@v5
+        #   with:
+        #     context: "{{defaultContext}}:mysubdir"
+        #     push: true
+        #     tags: user/app:latest
