--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -17,6 +17,7 @@ jobs:
                ls -l
                pwd
                docker --version
+               docker build -t powerpipeline .
           
         # - name: Set up Docker Buildx
         #   uses: docker/setup-buildx-action@v3
