--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -20,14 +20,11 @@ jobs:
                docker build -t powerpipeline .
                docker tag powerpipeline:latest 609695713455.dkr.ecr.ap-southeast-1.amazonaws.com/powerpipeline:latest
           
-        # - name: Set up Docker Buildx
-        #   uses: docker/setup-buildx-action@v3
-        
-               
-          
-        # - name: Build and push
-        #   uses: docker/build-push-action@v5
-        #   with:
-        #     context: "{{defaultContext}}:mysubdir"
-        #     push: true
-        #     tags: user/app:latest
+               aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 637423247927.dkr.ecr.ap-south-1.amazonaws.com
+                # push the image into aws ecr
+
+               docker push 637423247927.dkr.ecr.ap-south-1.amazonaws.com/powerpipeline:latest
+
+                env:
+                AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
