--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -11,6 +11,16 @@ jobs:
         - name: Checkout code
           uses: actions/checkout@master
 
+        - name: Set up AWS CLI
+          run: |
+           aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+           aws configure set region ${{ secrets.AWS_DEFAULT_REGION }}
+          env:
+           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+
           
         - name: check files
           run: |
